# embedded-cicd-pipeline

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
src/: main.cpp  sensor.cpp  sensor.h
tests/: test_sensor.cpp
